@@ -2328,6 +2328,22 @@ span.CodeMirror-selected {
     position: static;
 }
 
+.pma_table th.draggable {
+    position: relative;
+}
+
+.pma_table th.draggable input {
+    font-weight: inherit;
+    position: absolute;
+    top: -.2em;
+    left: 0;
+    width: 100%;
+    background: transparent;
+    border: 0;
+    outline: none;
+    text-align: center;
+}
+
 .pma_table th.draggable span, .pma_table tbody td span {
     display: block;
     overflow: hidden;
